--- a/.env
+++ b/.env
@@ -1,2 +1,12 @@
 NEWS_API_KEY=321e9be269d74e499ebb0a75a0642979
 NEWS_API_BASE_URL=https://newsapi.org/v2/
+DATABASE_URL="postgres://userrnc:4a03TxQSUmPUSD2TNuwKyUDcLMQwKD4m@dpg-clf7e4t3qkas73fa7fe0-a.oregon-postgres.render.com/storytellingnewsdb"
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
