--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.16",
+    "@prisma/client": "^5.6.0",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "reflect-metadata": "^0.1.13",
